2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	*  (svn:ignore):
	Add a couple of files more to ignore

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/worker (svn:ignore):
	*  (svn:ignore):
	* flumotion/worker/checks (svn:ignore):
	Add files to ignore

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/worker/checks/Makefile.am:
	Add the check to dist

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add 'deinterlace-mode' and deinterlace-method' properties and deprecate
	'deinterlacer' property

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/dvb.py:
	Add videorate effect

2010-07-07  Marc André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/dvb/dvb.py:
	Warn deprecated scaled-width property

2010-07-07  Marc André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/dvb/admin_gtk.py:
	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Replace videoscalling by videoscale effect

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/admin_gtk.py:
	Add component methods for volume and deinterlace effect

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/admin_gtk.py:
	Add the deinterlacer node in the decoder admin

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/admin_gtk.py:
	Add DecoderBaseAdminGtk class and make MegTS and DVB use it.
	DVB base class was only used by the DVB admin while the decoder base
	class makes more sense since both MpegTS and DVB will share effects code.
